fix image size on mobile

--- a/dylanvu-portfolio/src/app/globals.css
+++ b/dylanvu-portfolio/src/app/globals.css
@@ -91,4 +91,9 @@ body {
   .content {
     font-size: 0.9rem;
   }
+
+  .page {
+    width: 100%;
+    margin: auto;
+  }
 }
